<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">
<!--nome-->
    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtNome"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtNomeMsg"
        android:inputType="text"
        android:textSize="25sp" />
<!--endereço-->
    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtEndereco"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtEnderecoMsg"
        android:inputType="text"
        android:textSize="25sp" />
<!--Bairro-->
    <TextView
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtBairro"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtBairroMsg"
        android:inputType="text"
        android:textSize="25sp" />
<!--CEP-->
    <TextView
        android:id="@+id/txtCEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtCEP"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtCEP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtCEPMsg"
        android:inputType="text"
        android:textSize="25sp" />
<!--cidade-->
    <TextView
        android:id="@+id/txtCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtCidade"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtCidadeMsg"
        android:inputType="text"
        android:textSize="25sp" />
<!--estado-->
    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtEstado"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtEstado"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtEstadoMsg"
        android:inputType="text"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnCadastrar"
        android:textSize="30sp" />

</LinearLayout>